--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -107,7 +107,7 @@ block content
         +b.menu
             .container
                 +e.item
-                    img(src="images/architect.png" height="23px")
+                    img(src="images/new/i/i1.svg" height="23px")
                     +e({tag: 'a'}).link Архитектурное проектирование
                     .arrow.arrow_bottom.arrow_theme_light
                     +e.submenu
@@ -137,7 +137,7 @@ block content
                             +e({tag: 'a'}).link  Дизайн-проект интерьера здания/помещений с 3D визуализацией
 
                 +e.item
-                    img(src="images/geodesy.svg" height="26px")
+                    img(src="images/new/i/i2.svg" height="23px")
                     +e({tag: 'a'}).link Инженерные изыскания
                     .arrow.arrow_bottom.arrow_theme_light
                     +e.submenu
@@ -154,7 +154,7 @@ block content
                             +e({tag: 'a'}).link Геологическое заключение
                 
                 +e.item
-                    img(src="images/land-survey.png" height="20px")
+                    img(src="images/new/i/i3.svg" height="23px")
                     +e({tag: 'a'}).link Межевание и кадастр
                     .arrow.arrow_bottom.arrow_theme_light
                     +e.submenu
@@ -182,7 +182,7 @@ block content
                             +e({tag: 'a'}).link Узаконивание объекта строительства (в судебном порядке)
 
                 +e.item
-                    img(src="images/engineer.png" height="22px")
+                    img(src="images/new/i/i4.svg" height="23px")
                     +e({tag: 'a'}).link Инженерные сети
                     .arrow.arrow_bottom.arrow_theme_light
                     +e.submenu.menu__submenu_big
@@ -513,18 +513,35 @@ block content
             
 
 
-
-
-
-
-
-
-          
-
-
-            .content
+            .conten
 
                 section.container
+                    +b.title 
+                        +e.wrap
+                            +e.text Нам доверяют
+                    .
+                        <div class="logos">
+                            <div class="logos__items">
+                                <div class="logos__item"><img data-src="images/logo1.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo2.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo3.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo4.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo5.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo6.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo7.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo8.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo9.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo10.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo11.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo12.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo13.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo14.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo15.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo16.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo17.jpg"></div>
+                                <div class="logos__item"><img data-src="images/logo18.jpg"></div>
+                            </div>
+                        </div>
 
                     +b.title 
                         +e.wrap
