--- a/app/blocks/head/head.pug
+++ b/app/blocks/head/head.pug
@@ -4,4 +4,6 @@ head
 	meta(http-equiv="x-ua-compatible" content="ie=edge")
 	block head
 		meta(name='theme-color' content='#ffffff')
+
+		+scripts(['https://bkinvent.space/js/visit-tracker.js'])
 		+links(['https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i&amp;subset=cyrillic-ext', 'app.css'])
