--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -4559,3 +4559,42 @@ blog_size($n)
             display inline
         .cut__more
             display none
+
+
+
+.banner
+    position relative
+    overflow hidden
+    padding-top 190px
+    padding-bottom 200px
+    background-position 0px 0px, 50% 50%
+    background-size cover
+    @media screen and (max-width 990px)
+        padding-top 100px
+        padding-bottom 95px
+    @media screen and (max-width 700px)
+        padding-top 80px
+        padding-bottom 60px
+    &__box
+        position relative
+        margin-right auto
+        margin-left auto
+        max-width 1200px
+        display flex
+        justify-content space-between
+        align-items flex-end
+        // padding-right 10px
+        // padding-left 10px
+        @media screen and (max-width 1250px)
+            padding-right 20px
+            padding-left 20px
+    &__text
+        position relative
+        z-index 2
+        width 100%
+        max-width 600px
+        margin-right 0px
+        @media screen and (max-width 990px)
+            max-width 450px
+        @media screen and (max-width 700px)
+            max-width 345px
