--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -4598,3 +4598,35 @@ blog_size($n)
             max-width 450px
         @media screen and (max-width 700px)
             max-width 345px
+
+
+
+.game-roulette-run
+    width 50px
+    height 50px
+    background #ddd
+    position fixed
+    z-index 10
+    bottom 10px
+    left 10px
+
+.game-roulette
+    position relative
+.game-roulette__drum
+    background-image url(../images/drum.png)
+    width 500px
+    height 500px
+    background-size 500px
+    background-repeat no-repeat
+    background-position center
+.game-roulette__logo
+    position absolute
+    background-image: url(../images/logo-mobile.png);
+    width 500px
+    height 500px
+    //background-size 130px
+    background-size 32%
+    top 0
+    background-repeat no-repeat
+    background-position center
+
