--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -34,13 +34,14 @@
     z-index 300
     @media (min-width 1160px)
         background #fff url(../images/header.jpg) center no-repeat
+        position sticky
     // background-size cover
     
     &_hidden
         transform translate(0, -100%)
     //padding 20px 0
-    @media (min-width 1160px)
-        position relative
+    //@media (min-width 1160px)
+        //position relative
     &__wrapper
         min-height 59px
         height auto
