--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -61,14 +61,20 @@ block content
                                             +e({tag: 'a'}).link Мнение со стороны 
                                         +e.item
                                             +e({tag: 'a'}).link Как попасть в команду
-                                //- +e.item
-                                //-     +e({tag: 'a'}).link Акции
                                 +e.item
-                                    +e({tag: 'a'}).link Полезные статьи
+                                    +e({tag: 'a'}).link Акции
+                                +e.item
+                                    +e({tag: 'a'}).link Блог
                                 //- +e.item
                                 //-     +e({tag: 'a'}).link Партнерам
                                 +e.item
                                     +e({tag: 'a'}).link Контакты
+                                +e.item
+                                    +e({tag: 'a'}).link Способы оплаты
+                                
+                                +e.item
+                                    .btn.btn_view_pseudo
+                                        .btn__text Заказать звонок
                              
                                     
                                    
