--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -314,6 +314,8 @@
         &:after
             left calc(100% - 130px)
 
+    &__btn
+        padding 0.5em 0.8em!important
     &__item
         display inline-block
         margin 0 10px
@@ -419,6 +421,8 @@
             transform rotate(45deg)
     
     &__items
+        display: flex;
+        align-items: center;
         position relative
         top -20px
         visibility hidden
@@ -590,7 +594,7 @@
     text-align center
     display block
     width max-content
-    margin 5px 0 0px 0
+    margin 5px auto
     //padding-left 25px
     // @media (min-width 390px)
     //     padding-left 34px
