--- a/app/pages/text.pug
+++ b/app/pages/text.pug
@@ -48,15 +48,18 @@ block content
                                 +e.item
                                     +e({tag: 'a'}).link Контакты
                                 +e.item
-                                    //+e({tag: 'a'}).link
-                                    .top-menu__search-btn.
-                                        <svg 
-                                        xmlns="http://www.w3.org/2000/svg"
-                                        xmlns:xlink="http://www.w3.org/1999/xlink"
-                                        width="13px" height="13px">
-                                        <path fill-rule="evenodd" class="top-menu__search-svg"  
-                                        d="M5.038,1.607 C6.956,1.607 8.525,3.232 8.525,5.218 C8.525,5.891 8.335,6.547 7.986,7.121 L7.669,7.647 L7.225,8.025 C6.607,8.550 5.846,8.829 5.038,8.829 C3.120,8.829 1.551,7.204 1.551,5.218 C1.551,3.232 3.120,1.607 5.038,1.607 ZM12.741,12.735 C13.074,12.374 13.074,11.783 12.741,11.439 L9.603,8.189 C9.508,8.090 9.412,8.025 9.301,7.975 C9.793,7.188 10.078,6.236 10.078,5.218 C10.078,2.329 7.811,-0.002 5.038,-0.002 C2.248,-0.002 -0.003,2.329 -0.003,5.218 C-0.003,8.106 2.248,10.437 5.038,10.437 C6.242,10.437 7.336,9.994 8.208,9.272 C8.240,9.338 8.287,9.419 8.335,9.485 L11.473,12.735 C11.647,12.916 11.885,12.998 12.107,12.998 C12.329,12.998 12.567,12.916 12.741,12.735 Z"/>
-                                        </svg>
+                                    .btn.btn_view_action.top-menu__btn(data-modal="modal__callme")
+                                        .btn__text Заказать звонок
+                                //- +e.item
+                                //-     //+e({tag: 'a'}).link
+                                //-     .top-menu__search-btn.
+                                //-         <svg 
+                                //-         xmlns="http://www.w3.org/2000/svg"
+                                //-         xmlns:xlink="http://www.w3.org/1999/xlink"
+                                //-         width="13px" height="13px">
+                                //-         <path fill-rule="evenodd" class="top-menu__search-svg"  
+                                //-         d="M5.038,1.607 C6.956,1.607 8.525,3.232 8.525,5.218 C8.525,5.891 8.335,6.547 7.986,7.121 L7.669,7.647 L7.225,8.025 C6.607,8.550 5.846,8.829 5.038,8.829 C3.120,8.829 1.551,7.204 1.551,5.218 C1.551,3.232 3.120,1.607 5.038,1.607 ZM12.741,12.735 C13.074,12.374 13.074,11.783 12.741,11.439 L9.603,8.189 C9.508,8.090 9.412,8.025 9.301,7.975 C9.793,7.188 10.078,6.236 10.078,5.218 C10.078,2.329 7.811,-0.002 5.038,-0.002 C2.248,-0.002 -0.003,2.329 -0.003,5.218 C-0.003,8.106 2.248,10.437 5.038,10.437 C6.242,10.437 7.336,9.994 8.208,9.272 C8.240,9.338 8.287,9.419 8.335,9.485 L11.473,12.735 C11.647,12.916 11.885,12.998 12.107,12.998 C12.329,12.998 12.567,12.916 12.741,12.735 Z"/>
+                                //-         </svg>
                                     
                     .header__right
                         +b.phone
