--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -97,11 +97,11 @@ block content
                                 +e.text.dynamic-phone 8 (863) 303-38-33
                         +b.messengers
                             //+e.title Напишите нам в мессенджер
-                            +e({tag: 'a'})( href="https://www.instagram.com/bk_invent", target="_blank").button.messengers__button_instagram
+                            //- +e({tag: 'a'})( href="https://www.instagram.com/bk_invent", target="_blank").button.messengers__button_instagram
                             +e({tag: 'a'})( href="https://vk.me/-151917740", target="_blank").button.messengers__button_vk
-                            +e({tag: 'a'})( href="https://m.me/102480911540416", target="_blank").button.messengers__button_fb
+                            //- +e({tag: 'a'})( href="https://m.me/102480911540416", target="_blank").button.messengers__button_fb
                             +e({tag: 'a'})( href="https://api.whatsapp.com/send?phone=79614270609", target="_blank").button.messengers__button_whatsapp
-                            +e({tag: 'a'})( href="viber://pa?chatURI=bkinventbot", target="_blank").button.messengers__button_viber
+                            //- +e({tag: 'a'})( href="viber://pa?chatURI=bkinventbot", target="_blank").button.messengers__button_viber
                             +e({tag: 'a'})( href="tg://resolve?domain=BKInventBot", target="_blank").button.messengers__button_telegram
                             
                             +e.title Напишите нам в мессенджер
@@ -476,6 +476,20 @@ block content
                                           
 
         .main
+            section.container
+                +b.slider.slider_type_main
+                    +e.wrapper
+                        +e.items.center
+                            +e().item
+                                a(href="/")
+                                    img(src="https://bk-invent.ru/uploads/kkjkkjk[pi.jpg") 
+                            +e.item
+                                a(href="/")
+                                    img(src="https://bk-invent.ru/uploads/oouuoiuoiuoup.png")
+                                                    
+
+
+
             +b.banner(style="background-image:url(images/baner1.jpg);")
                 +e.box
                     +e.text.
