--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -2166,6 +2166,8 @@ ul.list
 .main
     // transition filter 10ms
     // transition-delay 10ms
+    @media (max-width 1160px)
+        padding-top: 100px;
     position relative
     filter none
     transition filter 300ms 0ms
